--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Validator node-runner</title>
+    <meta name="description" content="Lightweight solution for deploying single page apps with GitHub Pages.">
 
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/linkednode-no-bg-crop.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>validator node-runner</title>
-  <meta name="description" content="Self Developed website build with React.js">
+    <style>
+      html { background-color: rgb(0, 0, 0); }
+    </style>
 
-  <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="validator node-runner">
-  <meta itemprop="description" content="Self Developed website build with React.js">
-  <meta itemprop="image"
-    content="https://raw.githubusercontent.com/linkednode/linkednode-web/main/Images/linkednode.png">
+    <!-- favicon -->
+    <!-- <link rel="icon" type=”image/svg+xml” href="/favicon/green-grid-144-168-192.svg"> -->
+    <link rel="alternate icon" type="image/png" href="/public/linkednode-no-bg-crop.png">
+    <!-- <link rel="apple-touch-icon" href="/favicon/green-grid-144-168-192-180x180.png"> -->
+    <!-- <link rel="manifest" href="/favicon/site.webmanifest"> -->
+    <meta name="theme-color" content="#000000">
 
-  <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://linkednode.xyz">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="validator node-runner">
-  <meta property="og:description" content="Self Developed website build with React.js">
-  <meta property="og:image"
-    content="https://raw.githubusercontent.com/linkednode/linkednode-web/main/Images/linkednode.png">
+    <!-- Start Single Page Apps for GitHub Pages -->
+    <script type="text/javascript">
+      // Single Page Apps for GitHub Pages
+      // MIT License
+      // https://github.com/rafgraph/spa-github-pages
+      // This script checks to see if a redirect is present in the query string,
+      // converts it back into the correct url and adds it to the
+      // browser's history using window.history.replaceState(...),
+      // which won't cause the browser to attempt to load the new url.
+      // When the single page app is loaded further down in this file,
+      // the correct url will be waiting in the browser's history for
+      // the single page app to route accordingly.
+      (function(l) {
+        if (l.search[1] === '/' ) {
+          var decoded = l.search.slice(1).split('&').map(function(s) { 
+            return s.replace(/~and~/g, '&')
+          }).join('?');
+          window.history.replaceState(null, null,
+              l.pathname.slice(0, -1) + decoded + l.hash
+          );
+        }
+      }(window.location))
+    </script>
+    <!-- End Single Page Apps for GitHub Pages -->
 
-  <!-- Twitter Meta Tags -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="validator node-runner">
-  <meta name="twitter:description" content="Self Developed website build with React.js">
-  <meta name="twitter:image"
-    content="https://raw.githubusercontent.com/linkednode/linkednode-web/main/Images/linkednode.png">
-</head>
-
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-</body>
-
+  </head>
+  <body>
+    <div id="root"></div>
+    <!-- single page app in bundle.js -->
+    <script src="/build/bundle.js"></script>
+  </body>
 </html>
