--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
     <!-- favicon -->
     <!-- <link rel="icon" type=”image/svg+xml” href="/favicon/green-grid-144-168-192.svg"> -->
-    <link rel="alternate icon" type="image/png" href="/public/linkednode-no-bg-crop.png">
+    <link rel="alternate icon" type="image/png" href="/public/favicon.ico">
     <!-- <link rel="apple-touch-icon" href="/favicon/green-grid-144-168-192-180x180.png"> -->
     <!-- <link rel="manifest" href="/favicon/site.webmanifest"> -->
     <meta name="theme-color" content="#000000">
