--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,45 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Validator node-runner</title>
-    <meta name="description" content="Lightweight solution for deploying single page apps with GitHub Pages.">
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/linkednode-no-bg-crop.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Proof-Of-Stake validator blockchain" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <title>validator blockchain</title>
+    <meta name="description" content="Proof-Of-Stake validator blockchain">
+
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="validator blockchain">
+    <meta itemprop="description" content="Proof-Of-Stake validator blockchain">
+    <meta itemprop="image"
+      content="https://raw.githubusercontent.com/linkednode/linkednode.github.io/main/Images/linkednode.png">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://www.linkednode.xyz">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="validator blockchain">
+    <meta property="og:description" content="Proof-Of-Stake validator blockchain">
+    <meta property="og:image"
+      content="https://raw.githubusercontent.com/linkednode/linkednode.github.io/main/Images/linkednode.png">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="validator blockchain">
+    <meta name="twitter:description" content="Proof-Of-Stake validator blockchain">
+    <meta name="twitter:image"
+      content="https://raw.githubusercontent.com/linkednode/linkednode.github.io/main/Images/linkednode.png">
 
     <style>
       html { background-color: rgb(0, 0, 0); }
     </style>
 
     <!-- favicon -->
-    <!-- <link rel="icon" type=”image/svg+xml” href="/favicon/green-grid-144-168-192.svg"> -->
+    <link rel="icon" type=”image/svg+xml” href="/public/favicon.ico">
     <link rel="alternate icon" type="image/png" href="/public/favicon.ico">
-    <!-- <link rel="apple-touch-icon" href="/favicon/green-grid-144-168-192-180x180.png"> -->
-    <!-- <link rel="manifest" href="/favicon/site.webmanifest"> -->
+    <link rel="apple-touch-icon" href="/public/favicon.ico">
+    <link rel="manifest" href="/favicon/site.webmanifest">
     <meta name="theme-color" content="#000000">
 
     <!-- Start Single Page Apps for GitHub Pages -->
