--- a/public/index.html
+++ b/public/index.html
@@ -2,45 +2,34 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/linkednode-no-bg-crop.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Proof-Of-Stake validator blockchain" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>validator blockchain</title>
-    <meta name="description" content="Proof-Of-Stake validator blockchain">
+    <title>Validator Blockchain</title>
 
-    <!-- Google / Search Engine Tags -->
-    <meta itemprop="name" content="validator blockchain">
-    <meta itemprop="description" content="Proof-Of-Stake validator blockchain">
-    <meta itemprop="image"
-      content="https://raw.githubusercontent.com/linkednode/linkednode.github.io/main/Images/linkednode.png">
+    <!-- Favicon for different devices and formats -->
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
 
-    <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://www.linkednode.xyz">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="validator blockchain">
-    <meta property="og:description" content="Proof-Of-Stake validator blockchain">
-    <meta property="og:image"
-      content="https://raw.githubusercontent.com/linkednode/linkednode.github.io/main/Images/linkednode.png">
+    <!-- Social media and SEO tags -->
+    <meta property="og:url" content="https://www.linkednode.xyz" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Validator Blockchain" />
+    <meta property="og:description" content="Proof-Of-Stake validator blockchain" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/linkednode/linkednode.github.io/main/Images/linkednode.png" />
 
-    <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="validator blockchain">
-    <meta name="twitter:description" content="Proof-Of-Stake validator blockchain">
-    <meta name="twitter:image"
-      content="https://raw.githubusercontent.com/linkednode/linkednode.github.io/main/Images/linkednode.png">
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Validator Blockchain" />
+    <meta name="twitter:description" content="Proof-Of-Stake validator blockchain" />
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/linkednode/linkednode.github.io/main/Images/linkednode.png" />
 
     <style>
       html { background-color: rgb(0, 0, 0); }
     </style>
-
-    <!-- favicon -->
-    <link rel="icon" type=”image/svg+xml” href="/public/favicon.ico">
-    <link rel="alternate icon" type="image/png" href="/public/favicon.ico">
-    <link rel="apple-touch-icon" href="/public/favicon.ico">
-    <link rel="manifest" href="/favicon/site.webmanifest">
-    <meta name="theme-color" content="#000000">
 
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
